@@ -32,6 +32,7 @@ distribution.
 
 #include "DataDefs.h"
 #include "df/job_item_ref.h"
+#include "df/item_type.h"
 
 namespace df
 {
@@ -69,6 +70,9 @@ namespace DFHack
         DFHACK_EXPORT bool attachJobItem(df::job *job, df::item *item,
                                          df::job_item_ref::T_role role,
                                          int filter_idx = -1, int insert_idx = -1);
+
+        DFHACK_EXPORT bool isSuitableItem(df::job_item *item, df::item_type itype, int isubtype);
+        DFHACK_EXPORT bool isSuitableMaterial(df::job_item *item, int mat_type, int mat_index);
     }
 
     DFHACK_EXPORT bool operator== (const df::job_item &a, const df::job_item &b);
