@@ -2,6 +2,7 @@ DFHack future
 
   Internals:
     - support for displaying active keybindings properly.
+    - support for reusable widgets in lua screen library.
   Notable bugfixes:
     - autobutcher can be re-enabled again after being stopped.
     - stopped Dwarf Manipulator from unmasking vampires.
@@ -9,6 +10,8 @@ DFHack future
     - fastdwarf: new mode using debug flags, and some internal consistency fixes.
     - added a small stand-alone utility for applying and removing binary patches.
     - removebadthoughts: add --dry-run option
+  New GUI scripts:
+    - gui/guide-path: displays the cached path for minecart Guide orders.
 
 DFHack v0.34.11-r2
 
